objects/CMPL123CME__MedDRA_System_Organ_Class__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Status of System Organ Class</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_abbrev__c</fullName>
        <description>System Organ Class abbreviation</description>
        <inlineHelpText>System Organ Class abbreviation</inlineHelpText>
        <label>SOC Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_costart_sym__c</fullName>
        <description>Symbol allocated by the COSTART terminology</description>
        <inlineHelpText>Symbol allocated by the COSTART terminology</inlineHelpText>
        <label>SOC COSTART Code</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_harts_code__c</fullName>
        <description>Code allocated by the HARTS terminology</description>
        <inlineHelpText>Code allocated by the HARTS terminology</inlineHelpText>
        <label>SOC HARTS Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_icd10_code__c</fullName>
        <description>Code allocated by the 10th Revision of the International Classification of Diseases</description>
        <inlineHelpText>Code allocated by the 10th Revision of the International Classification of Diseases</inlineHelpText>
        <label>SOC ICD-10 Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_icd9_code__c</fullName>
        <description>Code allocated by the 9th Revision of the International Classification of Diseases</description>
        <inlineHelpText>Code allocated by the 9th Revision of the International Classification of Diseases</inlineHelpText>
        <label>SOC ICD-9 Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_icd9cm_code__c</fullName>
        <description>Code allocated by the 9th Revision of the International Classification of Diseases, Clinical Modification</description>
        <inlineHelpText>Code allocated by the 9th Revision of the International Classification of Diseases, Clinical Modification</inlineHelpText>
        <label>SOC ICD-9-CM Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_jart_code__c</fullName>
        <description>Code allocated by the J-ART terminology</description>
        <inlineHelpText>Code allocated by the J-ART terminology</inlineHelpText>
        <label>SOC J-ART Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_name__c</fullName>
        <description>Full name of the System Organ Class</description>
        <externalId>true</externalId>
        <inlineHelpText>Full name of the System Organ Class</inlineHelpText>
        <label>SOC Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>SOC Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__soc_whoart_code__c</fullName>
        <description>Code allocated by the WHO-ART terminology</description>
        <inlineHelpText>Code allocated by the WHO-ART terminology</inlineHelpText>
        <label>SOC WHO-ART Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>MedDRA System Organ Class</label>
    <nameField>
        <label>SOC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA System Organ Class</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__Abbrevation_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__soc_abbrev__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__soc_abbrev__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__SOC_Code_Should_Be_8_Characters_Only</fullName>
        <active>true</active>
        <description>System Organ Class Code value must have 8 characters only</description>
        <errorConditionFormula>OR(
LEN(Name) &lt; 8 ,
LEN(Name) &gt; 8
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>SOC Code value must have 8 characters only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__SOC_Name_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__soc_name__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__soc_name__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>